base.html entegre edilidi footer ve header sabit

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,4 +1,6 @@
-
+{% extends 'base.html' %}
+{% load static %}
+{% block content %}
     <!-- end header section -->
     <!-- slider section -->
     <section class=" slider_section position-relative">
@@ -302,4 +304,4 @@
 
   <!-- end client section -->
 
- 
+ {% endblock content %}
