django ya geçerken alınan hatalr çözüldü

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,4 +1,4 @@
-
+{% load static %}
 
  <section class="container-fluid footer_section ">
       <div class="tow">
@@ -13,8 +13,8 @@
     <!-- footer section -->
   </div>
 
-  <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
-  <script type="text/javascript" src="js/bootstrap.js"></script>
+  <script type="text/javascript" src="{% static 'js/jquery-3.4.1.min.js' %}"></script>
+  <script type="text/javascript" src="{% static 'js/bootstrap.js' %}"></script>
 
   <script>
     function openNav() {
