--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -3,6 +3,7 @@
 {% block content %}
     <!-- end header section -->
     <!-- slider section -->
+
     <section class=" slider_section position-relative">
       <div id="Customcarousel1" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
@@ -27,7 +28,7 @@
                 </div>
                 <div class="col-md-6">
                   <div class="img-box">
-                    <img src="images/slider-img.png" alt="">
+                    <img src= "{% static 'images/slider-img.png' %}" alt="">
                   </div>
                 </div>
               </div>
@@ -54,7 +55,7 @@
                 </div>
                 <div class="col-md-6">
                   <div class="img-box">
-                    <img src="images/slider-img.png" alt="">
+                    <img src= "{% static 'images/slider-img.png' %}" alt="">
                   </div>
                 </div>
               </div>
@@ -81,7 +82,7 @@
                 </div>
                 <div class="col-md-6">
                   <div class="img-box">
-                    <img src="images/slider-img.png" alt="">
+                    <img src="{% static 'images/slider-img.png' %}" alt="">
                   </div>
                 </div>
               </div>
@@ -112,7 +113,7 @@
           </h2>
         </div>
         <div class="img-box">
-          <img src="images/about-img.png" alt="">
+          <img src="{% static 'images/about-img.png' %}" alt="">
         </div>
         <div class="row">
           <div class="col-md-10 mx-auto">
@@ -144,7 +145,7 @@
           <div class="col-md-3 col-sm-6">
             <div class="box">
               <div class="img-box">
-                <img class="" src="images/teacher-1.jpg" alt="Card image cap">
+                <img class="" src="{% static 'images/teacher-1.jpg' %}" alt="Card image cap">
               </div>
               <div class="detail-box">
                 <p>
@@ -158,7 +159,7 @@
           <div class="col-md-3 col-sm-6">
             <div class="box">
               <div class="img-box">
-                <img class="" src="images/teacher-2.jpg" alt="Card image cap">
+                <img class="" src="{% static 'images/teacher-2.jpg' %}" alt="Card image cap">
               </div>
               <div class="detail-box">
                 <p>
@@ -172,7 +173,7 @@
           <div class="col-md-3 col-sm-6">
             <div class="box">
               <div class="img-box">
-                <img class="" src="images/teacher-3.jpg" alt="Card image cap">
+                <img class="" src="{% static 'images/teacher-3.jpg' %}" alt="Card image cap">
               </div>
               <div class="detail-box">
                 <p>
@@ -186,7 +187,7 @@
           <div class="col-md-3 col-sm-6">
             <div class="box">
               <div class="img-box">
-                <img class="" src="images/teacher-4.jpg" alt="Card image cap">
+                <img class="" src="{% static 'images/teacher-4.jpg' %}" alt="Card image cap">
               </div>
               <div class="detail-box">
                 <p>
@@ -248,7 +249,7 @@
               <div class="img_container">
                 <div class="img-box">
                   <div class="img_box-inner">
-                    <img src="images/client.png" alt="">
+                    <img src= "{% static 'images/client.png' %}" alt="">
                   </div>
                 </div>
               </div>
@@ -270,7 +271,7 @@
               <div class="img_container">
                 <div class="img-box">
                   <div class="img_box-inner">
-                    <img src="images/client.png" alt="">
+                    <img src= "{% static 'images/client.png' %}" alt="">
                   </div>
                 </div>
               </div>
@@ -300,7 +301,47 @@
 
     </div>
   </section>
+<div class="footer_bg">
 
+    <!-- contact section -->
+
+    <section class="contact_section ">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-md-7 mx-auto">
+            <div class="heading_container">
+              <h2 class="">
+                Get In Touch
+              </h2>
+            </div>
+            <form action="">
+              <div>
+                <input type="text" placeholder="Name" />
+              </div>
+              <div>
+                <input type="text" placeholder="Pone Number" />
+              </div>
+              <div>
+                <input type="email" placeholder="Email" />
+              </div>
+              <div>
+                <input type="text" class="message-box" placeholder="Message" />
+              </div>
+              <div class="d-flex  mt-4 ">
+                <button>
+                  SEND
+                </button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- end contact section -->
+
+    <!-- info section -->
+    
 
   <!-- end client section -->
 
