--- a/templates/header.html
+++ b/templates/header.html
@@ -37,7 +37,7 @@
     <header class="header_section">
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container">
-          <a class="navbar-brand" href="index.html">
+          <a class="navbar-brand" href= "{% url 'home' %}">
             <span>
               Visdor
             </span>
@@ -51,9 +51,9 @@
           </div>
           <div id="myNav" class="overlay">
             <div class="overlay-content">
-              <a href="index.html" class="active">Home</a>
-              <a href="about.html">About</a>
-              <a href="teacher.html">Teachers</a>
+              <a href= "{% url 'home' %}" class="active">Home</a>
+              <a href="{% url 'about' %}">About</a>
+              <a href="{% url 'teacher' %}">Teachers</a>
             </div>
           </div>
       </div>
