--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -227,7 +227,7 @@
               <div class="img_container">
                 <div class="img-box">
                   <div class="img_box-inner">
-                    <img src="images/client.png" alt="">
+                    <img src= "{% static 'images/client.png' %}" alt="">
                   </div>
                 </div>
               </div>
