--- a/home/templates/home/teacher.html
+++ b/home/templates/home/teacher.html
@@ -3,9 +3,6 @@
 {% block content %}
     <!-- end header section -->
 
-  </div>
-
-
   <!-- teacher section -->
   <section class="teacher_section ">
     <div class="container">
@@ -19,7 +16,7 @@
           <div class="col-md-3 col-sm-6">
             <div class="box">
               <div class="img-box">
-                <img class="" src="{% static 'images/teacher-1.jpg' %}" alt="Card image cap">
+                <img class="" src="{% static 'images/teacher-1.jpg' %}"  alt="Card image cap">
               </div>
               <div class="detail-box">
                 <p>
@@ -30,48 +27,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-3 col-sm-6">
-            <div class="box">
-              <div class="img-box">
-                <img class="" src="{% static 'images/teacher-2.jpg' %}" alt="Card image cap">
-              </div>
-              <div class="detail-box">
-                <p>
-                  <h5>
-                    David Mark
-                  </h5>
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-6">
-            <div class="box">
-              <div class="img-box">
-                <img class="" src="{% static 'images/teacher-3.jpg' %}" alt="Card image cap">
-              </div>
-              <div class="detail-box">
-                <p>
-                  <h5>
-                    Leena Smith
-                  </h5>
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-6">
-            <div class="box">
-              <div class="img-box">
-                <img class="" src= "{% static 'images/teacher-4.jpg' %}" alt="Card image cap">
-              </div>
-              <div class="detail-box">
-                <p>
-                  <h5>
-                    Jack Doe
-                  </h5>
-                </p>
-              </div>
-            </div>
-          </div>
+     
         </div>
       </div>
       <div class="btn-box">
@@ -81,8 +37,8 @@
       </div>
     </div>
   </section>
-
+  <div class="footer_bg">
   <!-- teacher section -->
 
 
-  {% endblock content %}
+{% endblock %}
