--- a/templates/header.html
+++ b/templates/header.html
@@ -15,7 +15,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Visdor</title>
+  <title>Django Project</title>
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
@@ -39,7 +39,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container">
           <a class="navbar-brand" href= "{% url 'home' %}">
             <span>
-              Visdor
+              Mslm
             </span>
           </a>
           <div class="custom_menu-btn">
