--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -314,18 +314,20 @@
                 Get In Touch
               </h2>
             </div>
-            <form action="">
+            <form action="" method="post">
+              {% csrf_token %}
               <div>
-                <input type="text" placeholder="Name" />
+                {{form.name}}
+                
               </div>
               <div>
-                <input type="text" placeholder="Pone Number" />
+                {{form.phone_number}}
               </div>
               <div>
-                <input type="email" placeholder="Email" />
+                {{form.email}}
               </div>
               <div>
-                <input type="text" class="message-box" placeholder="Message" />
+                {{form.message}}
               </div>
               <div class="d-flex  mt-4 ">
                 <button>
