--- a/home/templates/home/teacher.html
+++ b/home/templates/home/teacher.html
@@ -10,26 +10,31 @@
         <h2 class="">
           Our Teachers
         </h2>
-      </div>
+      </div>      
       <div class="teacher_container layout_padding2">
         <div class="row">
+          {% for teacher in teachers %}
           <div class="col-md-3 col-sm-6">
             <div class="box">
               <div class="img-box">
-                <img class="" src="{% static 'images/teacher-1.jpg' %}"  alt="Card image cap">
+                <img class="" src="{{teacher.image.url}}"  alt="Card image cap">
               </div>
               <div class="detail-box">
                 <p>
+                  <h4>
+                    {{teacher.first_name}}  {{teacher.last_name}}
+                  </h4>
                   <h5>
-                    Rose Adams
+                     {{teacher.branch}}-{{teacher.email_teacher}}
                   </h5>
                 </p>
               </div>
             </div>
           </div>
-     
+      {% endfor %}
         </div>
       </div>
+     
       <div class="btn-box">
         <a href="">
           See More
