--- a/templates/header.html
+++ b/templates/header.html
@@ -54,6 +54,15 @@
               <a href= "{% url 'home' %}" class="active">Home</a>
               <a href="{% url 'about' %}">About</a>
               <a href="{% url 'teacher' %}">Teachers</a>
+              
+              {% if request.user.is_authenticated %}
+               
+                <a href= "{% url 'admin:index' %}" class="active">AdminDashboard</a>
+                <a href= "{% url 'logout' %}" class="active">Logout</a>
+                {% else %}
+                <a href= "{% url 'login' %}" class="active">Login</a>
+              {% endif %}
+                
             </div>
           </div>
       </div>
